# backend/app/Models/Story.php
@@ -20,6 +20,27 @@ class Story extends Model
         'user_id',
         'category_id',
         'title',
+        'slug',
+        'subtitle',
+        'photo_url',
+        'quote',
+        'person_name',
+        'person_location',
+        'facilitator_name',
+        'facilitator_organization',
+        'state_id',
+        'state_name',
+        'district_id',
+        'district_name',
+        'sub_district_id',
+        'sub_district_name',
+        'block_id',
+        'block_name',
+        'panchayat_id',
+        'panchayat_name',
+        'village_id',
+        'village_name',
+        'description',
         'content',
         'status',
         'approved_by',
